--- a/now.json
+++ b/now.json
@@ -2,7 +2,8 @@
   "version": 1,
   "name": "evidapp-frontend",
   "alias": [
-    "evidapp"
+    "evidapp",
+    "dochazka"
   ],
   "regions": [
     "bru"
