--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "now-build": "vue-cli-service build",
-    "serve": "vue-cli-service serve",
-    "watch": "vue-cli-service serve --watch",
-    "build": "vue-cli-service build --watch",
-    "lint": "vue-cli-service lint"
+    "watch": "./node_modules/.bin/vue-cli-service serve --watch",
+    "serve": "./node_modules/.bin/vue-cli-service serve",
+    "build": "./node_modules/.bin/vue-cli-service build",
+    "lint": "./node_modules/.bin/vue-cli-service lint"
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^1.1.2",
@@ -18,7 +17,7 @@
     "auth0-js": "^9.10.4",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
-    "core-js": "2.6.5",
+    "core-js": "^3.4.8",
     "echarts": "^4.2.1",
     "file-saver": "2.0.1",
     "firebase": "^6.0.4",
@@ -66,10 +65,13 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
     "axios-mock-adapter": "^1.17.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
     "purgecss": "^1.3.0",
     "sass-loader": "^7.1.0",
