--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "watch": "vue-cli-service serve --watch",
     "serve": "vue-cli-service serve",
+    "dev": "yarn watch",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -23,6 +24,7 @@
     "firebase": "^6.0.4",
     "instantsearch.css": "^7.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "material-icons": "^0.3.1",
     "perfect-scrollbar": "^1.4.0",
     "postcss-rtl": "^1.5.0",
