--- a/now.json
+++ b/now.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
   "name": "evidapp-frontend",
-  "alias": [
-    "evidapp",
-    "dochazka"
-  ],
   "regions": [
     "bru"
   ],
@@ -24,5 +20,10 @@
     },
     { "handle": "filesystem" },
     { "src": ".*", "dest": "/" }
-  ]
+  ],
+  "env": {
+    "PROJECT_NAME": "evidapp-frontend",
+    "APP_ENV": "prod",
+    "API_URL": "https://tichysvet-evidapp.randef.com/v1"
+  }
 }
