--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-countdown": "^1.1.2",
+    "@sheet/edit": "file:sheet-edit.tar.gz",
     "ag-grid-community": "^21.0.1",
     "ag-grid-vue": "^21.0.1",
     "algoliasearch": "^3.33.0",
@@ -18,7 +19,7 @@
     "auth0-js": "^9.10.4",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
-    "core-js": "^3.4.8",
+    "core-js": "^3.6.4",
     "echarts": "^4.2.1",
     "file-saver": "2.0.1",
     "firebase": "^6.0.4",
@@ -62,8 +63,7 @@
     "vuedraggable": "^2.21.0",
     "vuejs-datepicker": "^1.5.4",
     "vuesax": "3.11.1",
-    "vuex": "^3.1.1",
-    "xlsx": "^0.15.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
